--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 astroid==2.2.5
+dj-database-url==0.5.0
 Django==2.2.1
+django-heroku==0.3.1
 gunicorn==19.9.0
 isort==4.3.18
 lazy-object-proxy==1.3.1
@@ -10,4 +12,5 @@ pytz==2019.1
 six==1.12.0
 sqlparse==0.3.0
 typed-ast==1.3.5
+whitenoise==4.1.2
 wrapt==1.11.1
