--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 astroid==2.2.5
+colorama==0.4.1
 dj-database-url==0.5.0
 Django==2.2.1
+django-environ==0.4.5
 django-heroku==0.3.1
 gunicorn==19.9.0
 isort==4.3.18
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+Pillow==6.0.0
 psycopg2==2.8.2
 pylint==2.3.1
 pytz==2019.1
