--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
 astroid==2.2.5
+boto3==1.9.152
+botocore==1.12.152
 colorama==0.4.1
 dj-database-url==0.5.0
 Django==2.2.1
 django-environ==0.4.5
 django-heroku==0.3.1
+django-storages==1.7.1
+docutils==0.14
 gunicorn==19.9.0
 isort==4.3.18
+jmespath==0.9.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 Pillow==6.0.0
 psycopg2==2.8.2
 pylint==2.3.1
+python-dateutil==2.8.0
 pytz==2019.1
+s3transfer==0.2.0
 six==1.12.0
 sqlparse==0.3.0
 typed-ast==1.3.5
+urllib3==1.24.3
 whitenoise==4.1.2
 wrapt==1.11.1
