--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ botocore==1.12.152
 colorama==0.4.1
 dj-database-url==0.5.0
 Django==2.2.1
+django-ckeditor==5.7.1
 django-environ==0.4.5
 django-heroku==0.3.1
+django-js-asset==1.2.2
 django-storages==1.7.1
 docutils==0.14
 gunicorn==19.9.0
