--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,8 @@ jmespath==0.9.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 Pillow==6.0.0
-psycopg2==2.8.2
+psycopg2==2.7.7
+psycopg2-binary==2.7.7
 pylint==2.3.1
 python-dateutil==2.8.0
 pytz==2019.1
