--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 astroid==2.2.5
-boto3==1.9.152
-botocore==1.12.152
+awscli==1.27.3
+boto3==1.26.3
+botocore==1.29.3
+cmake==3.25.0
 colorama==0.4.1
+distlib==0.3.6
 dj-database-url==0.5.0
 Django==2.2.1
 django-ckeditor==5.7.1
@@ -10,21 +13,27 @@ django-heroku==0.3.1
 django-js-asset==1.2.2
 django-storages==1.7.1
 docutils==0.14
+filelock==3.8.0
 gunicorn==19.9.0
 isort==4.3.18
 jmespath==0.9.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
-Pillow==6.0.0
-psycopg2==2.7.7
-psycopg2-binary==2.7.7
+Pillow==9.3.0
+platformdirs==2.5.2
+psycopg2==2.9.5
+psycopg2-binary==2.9.5
+pyasn1==0.4.8
 pylint==2.3.1
 python-dateutil==2.8.0
 pytz==2019.1
-s3transfer==0.2.0
+PyYAML==5.4.1
+rsa==4.7.2
+s3transfer==0.6.0
 six==1.12.0
 sqlparse==0.3.0
-typed-ast==1.3.5
-urllib3==1.24.3
+typed-ast==1.5.4
+urllib3==1.25.4
+virtualenv==20.16.5
 whitenoise==4.1.2
 wrapt==1.11.1
